--- a/libraries/buildingblocks/style/headers.css
+++ b/libraries/buildingblocks/style/headers.css
@@ -14,14 +14,14 @@ section[role="region"] > header:first-child {
 section[role="region"] > header:first-child h1 {
   font-size: 2.5rem;
   line-height: 5rem;
-  text-align: center;
+  text-align: left;
   color: #fff;
   white-space: nowrap;
   text-overflow: ellipsis;
   display: block;
   overflow: hidden;
   margin: 0;
-  padding: 0 0 0 8rem;
+  padding: 0 0 0 3rem;
   height: 100%;
   font-weight: lighter;
   font-style: italic;
