--- a/libraries/buildingblocks/fonts.css
+++ b/libraries/buildingblocks/fonts.css
@@ -2,37 +2,49 @@
 
 @font-face {
   font-family: 'FiraSans';
-  src: url('fonts/FiraSans/FiraSans-Regular.eot');
-  src: url('fonts/FiraSans/FiraSans-Regular.eot?#iefix') format('embedded-opentype'),
-       url('fonts/FiraSans/FiraSans-Regular.woff') format('woff'),
-       url('fonts/FiraSans/FiraSans-Regular.ttf') format('truetype');
+  src: url('fonts/FiraSans/FiraSansOT-Regular.otf') format('opentype'),
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'FiraSans';
-  src: url('fonts/FiraSans/FiraSans-Light.eot');
-  src: url('fonts/FiraSans/FiraSans-Light.eot?#iefix') format('embedded-opentype'),
-       url('fonts/FiraSans/FiraSans-Light.woff') format('woff'),
-       url('fonts/FiraSans/FiraSans-Light.ttf') format('truetype');
+  src: url('fonts/FiraSans/FiraSansOT-RegularItalic.otf') format('opentype'),
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'FiraSans';
+  src: url('fonts/FiraSans/FiraSansOT-Light.otf') format('opentype'),
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'FiraSans';
-  src: url('fonts/FiraSans/FiraSans-Medium.eot');
-  src: url('fonts/FiraSans/FiraSans-Medium.eot?#iefix') format('embedded-opentype'),
-       url('fonts/FiraSans/FiraSans-Medium.woff') format('woff'),
-       url('fonts/FiraSans/FiraSans-Medium.ttf') format('truetype');
+  src: url('fonts/FiraSans/FiraSansOT-LightItalic.otf') format('opentype'),
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'FiraSans';
+  src: url('fonts/FiraSans/FiraSansOT-Medium.otf') format('opentype'),
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'FiraSans';
-  src: url('fonts/FiraSans/FiraSans-Bold.eot');
-  src: url('fonts/FiraSans/FiraSans-Bold.eot?#iefix') format('embedded-opentype'),
-       url('fonts/FiraSans/FiraSans-Bold.woff') format('woff'),
-       url('fonts/FiraSans/FiraSans-Bold.ttf') format('truetype');
+  src: url('fonts/FiraSans/FiraSansOT-MediumItalic.otf') format('opentype'),
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'FiraSans';
+  src: url('fonts/FiraSans/FiraSansOT-Bold.otf') format('opentype'),
   font-weight: bold;
   font-style: normal;
+}
+@font-face {
+  font-family: 'FiraSans';
+  src: url('fonts/FiraSans/FiraSansOT-BoldItalic.otf') format('opentype'),
+  font-weight: bold;
+  font-style: italic;
 }
